# trans-srt

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  main.py
src/core/: __init__.py  extract_content.py  trans_service.py
srt_translator/: __init__.py  main.py
srt_translator/subtitle/: __init__.py  parser.py  processor.py
srt_translator/translator/: __init__.py  azure_translator.py  base.py
